--- a/index.html
+++ b/index.html
@@ -4,7 +4,9 @@
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="/vite.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta name="description" content="Ce site n'est pas fonctionel. Il reprodui le site https://s-crew.fr/collections/all qui vent les vetements de la Seine Zoo.">
     <title>S-crew</title>
+    <link rel="stylesheet" href="style.css">
   </head>
   <body>
     <header>
